fix(racingcar): 각 라운드 결과를 담는 Map, 순서 보장을 위해 LinkedHashMap으로 생성 및 불변 복사 구현